// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionMenu should display items and allow click after toggle is clicked: click 1`] = `
[
  [
    {
      "foo": "bar",
    },
  ],
]
`;

exports[`ActionMenu should display items and allow click after toggle is clicked: expanded 1`] = `
<DocumentFragment>
  <button
    aria-expanded="true"
    aria-label="Action Menu Toggle"
    class="pf-v6-c-menu-toggle pf-m-expanded pf-m-plain"
    data-ouia-component-id="OUIA-Generated-MenuToggle-plain-1"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 192 512"
        width="1em"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`ActionMenu should display tooltip: hover 1`] = `
<body>
  <div>
    <button
      aria-expanded="true"
      aria-label="Action Menu Toggle"
      class="pf-v6-c-menu-toggle pf-m-expanded pf-m-plain"
      data-ouia-component-id="OUIA-Generated-MenuToggle-plain-2"
      data-ouia-component-type="PF6/MenuToggle"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-menu-toggle__text"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 192 512"
          width="1em"
        >
          <path
            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="pf-v6-c-menu"
    data-ouia-component-id="OUIA-Generated-Dropdown-2"
    data-ouia-component-type="PF6/Dropdown"
    data-ouia-safe="true"
    data-popper-escaped="true"
    data-popper-placement="bottom-start"
    data-popper-reference-hidden="true"
    style="position: absolute; left: 0px; top: 0px; z-index: 9999; opacity: 1; transition: opacity 0ms cubic-bezier(.54, 1.5, .38, 1.11); min-width: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="pf-v6-c-menu__content"
    >
      <ul
        class="pf-v6-c-menu__list"
        role="menu"
      >
        <li
          class="pf-v6-c-menu__list-item"
          data-ouia-component-id="OUIA-Generated-DropdownItem-2"
          data-ouia-component-type="PF6/DropdownItem"
          data-ouia-safe="true"
          role="none"
        >
          <button
            class="pf-v6-c-menu__item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span
              class="pf-v6-c-menu__item-main"
            >
              <span
                class="pf-v6-c-menu__item-text"
              >
                Lorem ipsum
              </span>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
  <div
    aria-live="polite"
    class="pf-v6-c-tooltip pf-m-top"
    data-popper-escaped="true"
    data-popper-placement="top"
    data-popper-reference-hidden="true"
    id="pf-tooltip-6"
    role="tooltip"
    style="position: absolute; left: 0px; top: 0px; z-index: 9999; opacity: 0; transition: opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11); min-width: revert; bottom: 0px; transform: translate(0px, -15px);"
  >
    <div
      class="pf-v6-c-tooltip__arrow"
    />
    <div
      class="pf-v6-c-tooltip__content"
    >
      dolor sit
    </div>
  </div>
</body>
`;

exports[`ActionMenu should render a basic component: basic 1`] = `
<Dropdown
  isOpen={false}
  onOpenChange={[Function]}
  onSelect={[Function]}
  shouldFocusToggleOnSelect={true}
  toggle={[Function]}
>
  <DropdownList>
    <DropdownItem
      onClick={[Function]}
      value="Lorem ipsum"
    >
      Lorem ipsum
    </DropdownItem>
  </DropdownList>
</Dropdown>
`;
